# neblen

./: .ghci  .gitignore  Design.md  Ideas.markdown  README.md  neblen.cabal  stack.yaml  test-program.neblen
resources/notes/: Data-Types-And-Kinds.md  Evaluation.md  Type-Checker-and-Inference.md
resources/vim/: neblen.vim
src/: Main.hs  Neblen.hs
src/Neblen/: AST.hs  Compiler.hs  Data.hs  DataTypes.hs  DataTypes2.hs  Eval.hs  Main.hs  Parser.hs  TypeChecker.hs  Utils.hs
tests/: TestSuite.hs
tests/Neblen/Eval/: Tests.hs
tests/Neblen/Parser/: Tests.hs
tests/Neblen/TypeChecker/: Tests.hs
