name:               neblen
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Neblen
                    Neblen.Compiler
                    Neblen.Parser
                    Neblen.Data
  build-depends:    base == 4.*
                  , containers >= 0.5.0.0
                  , array >= 0.5.0.0
                  , deepseq >= 1.3.0.0
                  , parsec >= 3.1.9

  ghc-options:      -threaded
                    -Wall
                    -fno-warn-unused-binds
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-type-defaults
  default-language: Haskell2010

test-suite            doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , template-haskell >= 2.8

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test

