name:               neblen
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Neblen
                    Neblen.Compiler
                    Neblen.Parser
                    Neblen.Data
                    Neblen.Eval

  build-depends:    base == 4.*
                  , containers >= 0.5.0.0
                  , array >= 0.5.0.0
                  , deepseq >= 1.3.0.0
                  , parsec >= 3.1.9
                  , haskeline >= 0.7.1.2
                  , process >= 1.2.0.0
                  , transformers >= 0.4.3.0

  ghc-options:      -threaded
                    -Wall
                    -fno-warn-unused-binds
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-type-defaults
  default-language: Haskell2010

test-suite neblen-tests
  type: exitcode-stdio-1.0
  -- main-is: doctests.hs
  main-is: TestSuite.hs
  default-language: Haskell2010

  build-depends:    base == 4.*
                  , HUnit >= 1.2 && < 1.3
                  , QuickCheck >= 2.0
                  , test-framework >= 0.8 && < 0.9
                  , test-framework-hunit >= 0.3.0
                  , test-framework-quickcheck2 >= 0.3.0
--                  , doctest >= 0.9.7
                  , filepath >= 1.3
                  , directory >= 1.1
                  , template-haskell >= 2.8

                  , transformers >= 0.4.3.0
                  , containers >= 0.5.0.0
                  , parsec >= 3.1.9

  ghc-options:      -threaded
                    -Wall
                    -fno-warn-unused-binds
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-type-defaults
  hs-source-dirs: src tests

